[gd_scene load_steps=7 format=3 uid="uid://bebclvu5nmvqj"]

[ext_resource type="Texture2D" uid="uid://xevgcnrlb8g8" path="res://data/images/1.png" id="1_8whv4"]
[ext_resource type="Script" path="res://scences/level/level.gd" id="1_di3gl"]
[ext_resource type="Texture2D" uid="uid://c3mn01f05qmm6" path="res://icon.svg" id="1_eaw5g"]
[ext_resource type="PackedScene" uid="uid://c24q2qulkmtyg" path="res://scences/pause_menu/pause_menu.tscn" id="4_6dit6"]
[ext_resource type="PackedScene" uid="uid://bebjgebel0nas" path="res://scences/main/main.tscn" id="5_1lprj"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_v1ttm"]

[node name="Level" type="Node2D"]
script = ExtResource("1_di3gl")

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(568, 321)
scale = Vector2(0.690704, 0.748)
texture = SubResource("CompressedTexture2D_v1ttm")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MarginContainer4" type="MarginContainer" parent="UI"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer4"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="Turn" type="Label" parent="UI/MarginContainer4/HBoxContainer"]
layout_mode = 2
text = "3 turn left
"

[node name="Time" type="Label" parent="UI/MarginContainer4/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="Score" type="Label" parent="UI/MarginContainer4/HBoxContainer"]
layout_mode = 2
text = "Score
"

[node name="Effect" type="MarginContainer" parent="UI"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -46.5
offset_right = 100.0
offset_bottom = 73.5
grow_vertical = 2
size_flags_horizontal = 4
theme_override_constants/margin_right = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Effect"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Effect1" type="Button" parent="UI/Effect/VBoxContainer"]
layout_mode = 2
text = "Effect1
"

[node name="Effect2" type="Button" parent="UI/Effect/VBoxContainer"]
layout_mode = 2
text = "Effect2"

[node name="Effect3" type="Button" parent="UI/Effect/VBoxContainer"]
layout_mode = 2
text = "Effect3"

[node name="Setting" type="MarginContainer" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -62.0
offset_top = 6.0
offset_right = 81.0
offset_bottom = 114.0
grow_horizontal = 0
scale = Vector2(0.4, 0.4)
size_flags_horizontal = 0
theme_override_constants/margin_right = 30

[node name="PauseMenu" type="Button" parent="UI/Setting"]
layout_mode = 2
mouse_default_cursor_shape = 2
icon = ExtResource("1_8whv4")

[node name="ScoreTimer" type="Timer" parent="UI"]
autostart = true

[node name="FinishGame" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="FinishGame"]
layout_mode = 0
offset_left = 271.0
offset_top = 84.0
offset_right = 880.0
offset_bottom = 572.0
texture = ExtResource("1_eaw5g")

[node name="VBoxContainer" type="VBoxContainer" parent="FinishGame/TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -71.5
offset_top = 52.0
offset_right = 35.5
offset_bottom = 117.0
grow_horizontal = 2
scale = Vector2(1.4, 1.4)
alignment = 1

[node name="Label" type="Label" parent="FinishGame/TextureRect/VBoxContainer"]
layout_mode = 2
text = "Score"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="FinishGame/TextureRect/VBoxContainer"]
layout_mode = 2
text = "NumberScore
"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="FinishGame/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.5
offset_top = 109.0
offset_right = 93.5
offset_bottom = 149.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.3, 1.3)

[node name="PlayAgain" type="Button" parent="FinishGame/TextureRect/HBoxContainer"]
layout_mode = 2
text = "Play Again
"

[node name="NextLevel" type="Button" parent="FinishGame/TextureRect/HBoxContainer"]
layout_mode = 2
text = "Next"

[node name="MainMenu" type="Button" parent="FinishGame/TextureRect/HBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="GridContainer" type="GridContainer" parent="FinishGame/TextureRect"]
layout_mode = 0
offset_left = 204.0
offset_top = 169.0
offset_right = 384.0
offset_bottom = 273.0
columns = 2

[node name="Label" type="Label" parent="FinishGame/TextureRect/GridContainer"]
layout_mode = 2
text = "Money:"

[node name="Label2" type="Label" parent="FinishGame/TextureRect/GridContainer"]
layout_mode = 2
text = "Amount"

[node name="Label3" type="Label" parent="FinishGame/TextureRect/GridContainer"]
layout_mode = 2
text = "Highest Score:"

[node name="Label4" type="Label" parent="FinishGame/TextureRect/GridContainer"]
layout_mode = 2
text = "Number"

[node name="pause_menu" parent="." instance=ExtResource("4_6dit6")]
visible = false
offset_left = 570.0
offset_top = 300.0
offset_right = 570.0
offset_bottom = 300.0
scale = Vector2(3, 3)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Main" parent="." instance=ExtResource("5_1lprj")]
position = Vector2(400, 0)
scale = Vector2(0.6, 0.6)

[connection signal="pressed" from="UI/Setting/PauseMenu" to="." method="_on_pause_menu_pressed"]
[connection signal="timeout" from="UI/ScoreTimer" to="." method="_on_score_timer_timeout"]
